--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-แอบเอาของชาวบ้านมาโมให้เป็น osgi
-โดย ธีรศักด์ แห่ง jeasydev
+แอบเอาของชาวบ้านมาโมให้เป็น osgi 
+อัพขึ้น github เผื่อว่าอาจจะมีใครอยากจะใช้บน osgi
+by ธีรศักดิ์ แห่ง jeasydev
